--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,20 @@ body {
     width: 100vw;
     height: 100vh;
     position: absolute;
-    top: -10px;
+}
+
+img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1000;
 }
 
 .login {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Inter";
 }
